# pl0c

./: .gitignore  CMakeLists.txt  cmake.sh  hello.pl0  test.pl0
include/: logs.h  misc.h  strtonum.h  ultratypes.h
include/adt/: array.h  common.h  hashmap.h  hashmapChained.h  list.h  queue.h  threadpool.h
src/: main.c  ref.c  token.c  token.h
tests/: 0001.pl0  test.sh
